# sfnd_computervision_module

./: .gitattributes  .gitignore  README.md
docker/: Makefile  (+3 more)
opencv_exercises/exercise11/: CMakeLists.txt  README.md
opencv_exercises/exercise11/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp  structIO.cpp
opencv_exercises/exercise2/: CMakeLists.txt  README.md  change_pixels.cpp
opencv_exercises/exercise3/: CMakeLists.txt  README.md  load_image_1.cpp  load_image_2.cpp  load_image_3.cpp
projects/SFND_2D_Feature_Tracking/: CMakeLists.txt  README.md
projects/SFND_2D_Feature_Tracking/output/: results_AKAZE_BRIEF_summary.csv  results_AKAZE_ORB_summary.csv  results_AKAZE_SIFT_summary.csv  results_BRISK_BRIEF_summary.csv  results_BRISK_BRISK_summary.csv  results_BRISK_ORB_summary.csv  results_FAST_BRIEF_summary.csv  results_HARRIS_FREAK_summary.csv  results_HARRIS_SIFT_summary.csv  results_ORB_BRISK_summary.csv  results_ORB_FREAK_summary.csv  results_ORB_SIFT_summary.csv  results_SHI-TOMASI_SIFT_summary.csv  results_SIFT_BRISK_summary.csv  results_SIFT_FREAK_summary.csv  results_SIFT_ORB_summary.csv  results_SIFT_SIFT_summary.csv  results_SIFT_kpts_distribution_data.csv
projects/SFND_2D_Feature_Tracking/results/: results_AKAZE_AKAZE_summary.csv  results_AKAZE_BRIEF_summary.csv  results_AKAZE_BRISK_summary.csv  results_AKAZE_FREAK_summary.csv  results_AKAZE_SIFT_summary.csv  results_AKAZE_kpts_distribution_data.csv  results_BRISK_BRISK_summary.csv  results_BRISK_SIFT_summary.csv  results_BRISK_kpts_distribution_data.csv  results_FAST_BRIEF_summary.csv  results_FAST_BRISK_summary.csv  results_HARRIS_BRIEF_summary.csv  results_HARRIS_BRISK_summary.csv  results_HARRIS_FREAK_summary.csv  results_HARRIS_SIFT_summary.csv  results_ORB_BRISK_summary.csv  results_ORB_ORB_summary.csv  results_ORB_defaultSize_BRISK_summary.csv  results_ORB_kpts_distribution_data.csv  results_SHI-TOMASI_BRISK_summary.csv  results_SIFT_BRISK_summary.csv  results_SIFT_ORB_summary.csv  results_SIFT_SIFT_summary.csv  results_SIFT_kpts_distribution_data.csv
projects/SFND_2D_Feature_Tracking/results/task_mp7/: results_FAST_BRISK_summary.csv  results_ORB_BRISK_summary.csv
projects/SFND_2D_Feature_Tracking/results/task_mp8_mp9/: results_AKAZE_AKAZE_summary.csv  results_AKAZE_BRISK_summary.csv  results_BRISK_FREAK_summary.csv  results_BRISK_SIFT_summary.csv  results_FAST_FREAK_summary.csv  results_SHI-TOMASI_BRIEF_summary.csv  (+3 more)
projects/SFND_2D_Feature_Tracking/results_mp7_mp8/: results_AKAZE_FREAK_summary.csv  results_FAST_BRISK_summary.csv  results_FAST_ORB_summary.csv  results_FAST_SIFT_summary.csv  results_FAST_kpts_distribution_data.csv  results_HARRIS_BRIEF_summary.csv  results_HARRIS_BRISK_summary.csv  results_HARRIS_ORB_summary.csv  results_HARRIS_kpts_distribution_data.csv  results_ORB_BRIEF_summary.csv  results_ORB_ORB_summary.csv  results_ORB_SIFT_summary.csv  results_SHI-TOMASI_ORB_summary.csv  results_SHI-TOMASI_kpts_distribution_data.csv
projects/SFND_2D_Feature_Tracking/scripts/: octave_mp7_mp8.m  octave_mp9.m  run_all_descriptor_detector_combinations.sh  run_all_descriptor_methods.sh
projects/SFND_2D_Feature_Tracking/src/: dataStructures.h  main.cpp  matching2D.cpp  matching2D.hpp  utils.cpp  utils.h
projects/SFND_3D_Object_Tracking/: .gitattributes  CMakeLists.txt  README.md
projects/SFND_3D_Object_Tracking/src/: FinalProject_Camera.cpp  camFusion.hpp  camFusion_Student.cpp  cameraFusion.cpp  cameraFusion.h  dataStructures.h  lidarData.cpp  lidarData.h  lidarData.hpp  main.cpp  matching2D.cpp  matching2D.h  matching2D.hpp  matching2D_Student.cpp  matchingFeatures2D.cpp  matchingFeatures2D.h  objectDetection2D.cpp  objectDetection2D.h  ttc.cpp  ttc.h  utils.cpp  utils.h
(+61 files in other folders)
